Rapid Prd/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Sales_Team_Member_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Update_On_Renewals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Update On Renewals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Uncheck to stop updates</inlineHelpText>
        <label>Send Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_Fund_Set_Up__c</fullName>
        <label>Split Fund Set Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rapid Advance Chooses</fullName>
                </value>
                <value>
                    <fullName>GPS - Rocky Mountain</fullName>
                </value>
                <value>
                    <fullName>EPR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Starter_and_Loan_Amendment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starter and Loan Amendment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Campaign_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Campaign Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitting_Partner_Date__c</fullName>
        <label>Submitting Partner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suppress_Site_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Site Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Syndication_Agreement_Received__c</fullName>
        <label>Syndication Agreement Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Syndication_Agreement_Sent__c</fullName>
        <label>Syndication Agreement Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Syndication_Campaign_Name__c</fullName>
        <label>Syndication Campaign Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndication_Notes__c</fullName>
        <label>Syndication Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndication_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syndication Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TCPA_Compliance__c</fullName>
        <label>TCPA Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_Product__c</fullName>
        <label>Targeted Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>LOC</fullName>
                </value>
                <value>
                    <fullName>MCA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telemarketing_Cost__c</fullName>
        <label>Telemarketing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <label>Temp</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminated_reason__c</fullName>
        <label>Terminated reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse vetting</fullName>
                </value>
                <value>
                    <fullName>Defamation</fullName>
                </value>
                <value>
                    <fullName>Excess fee surcharge</fullName>
                </value>
                <value>
                    <fullName>Misrepresentation / Forgery</fullName>
                </value>
                <value>
                    <fullName>Negative reputation</fullName>
                </value>
                <value>
                    <fullName>Poor Performance / High Risk Referrals</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Emails_Sent__c</fullName>
        <formula>NumberOfContacts +  NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lead_Cost__c</fullName>
        <formula>NumberOfLeads * Price_Per_Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lead Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Marketing_Cost__c</fullName>
        <formula>ActualCost + Telemarketing_Cost__c + Leads_Marketing_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marketing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Signed__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Partner_Email_1__c</fullName>
        <label>Update Partner Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Update_Partner_Email_2__c</fullName>
        <label>Update Partner Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Update_Partner_Email_3__c</fullName>
        <label>Update Partner Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>W_9_Form_Received__c</fullName>
        <label>W-9 Form Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Welcome_Package_Sent__c</fullName>
        <label>Welcome Package Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>White_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>White Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4_Month_Amendment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Month Amendment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Campaign_Id__c</fullName>
        <description>The Pardot identifier for the connected campaign record</description>
        <externalId>true</externalId>
        <label>Pardot Campaign Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Pardot_Has_Dependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Pardot has marketing assets using this campaign</description>
        <label>Pardot Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Split_Fund_Set_Up__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Campaign_Source_View</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Source__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Campaign_Contact__c</columns>
        <columns>Campaign_Contact_Email__c</columns>
        <columns>Campaign_Contact_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>Campaign Source View</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_Campaigns</fullName>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Total_Emails_Sent__c</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Email,newsletter,renewal</value>
        </filters>
        <label>Email Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Purchased_Lists_Telemarketing</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>Email,aahoa,alpha,test</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>notEqual</operation>
            <value>Partners</value>
        </filters>
        <label>Purchased Lists - Telemarketing</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Remove_Five9_Lists</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>Five9LSP__F9PS_List__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Five9LSP__F9PS_List__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Remove Five9 Lists</label>
    </listViews>
    <listViews>
        <fullName>UCC_Campaigns</fullName>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>4.6,ucc</value>
        </filters>
        <label>UCC Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>Campaign_Name_Not_allow_to_Change</fullName>
        <active>true</active>
        <description>Task 311 :- Revoke Permission to Update Campaign Name from All Roles Except Development and Support</description>
        <errorConditionFormula>ISCHANGED( Name )  &amp;&amp;  $Profile.Name  &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
        <errorMessage>Campaign name change has been restricted in Salesforce. To update the campaign name please log a ticket with Helpdesk.</errorMessage>
    </validationRules>
</CustomObject>